--- a/environment.yml
+++ b/environment.yml
@@ -18,3 +18,5 @@ dependencies:
   - pip:
     - pgcontents
     - git+git://github.com/ipython-contrib/jupyter_contrib_nbextensions.git
+    - pandas
+    - numpy
